Fix after RM#111332 (#16107)